# pibit_work

./: .env.example  .gitignore  README.md  debug_extraction.py  pyproject.toml  requirements.txt
app/: cli.py  main.py
app/datasets/: loader.py  pdf_loader.py  schemas.py  splitter.py
app/extraction/: extractor.py  parser.py  validator.py
app/llm/: ollama_client.py  prompts.py  roles.py
app/optimizer/: acceptance.py  beam_search.py  mutation.py  population.py  trajectory.py
app/persistence/: cache.py  checkpoints.py  database.py
app/reporting/: diff_viewer.py  plots.py  report_generator.py
app/scoring/: alignment.py  evaluator.py  metrics.py  semantic.py
app/utils/: config.py  hashing.py  logging_utils.py
configs/: base.yaml  datasets.yaml  models.yaml  optimizer.yaml
notebooks/: experiments.ipynb
reports/prompt_optimization_run_20260528_092837/: report.md
tests/: test_alignment.py  test_extraction.py  test_ollama.py  test_optimizer.py  test_pdf.py  test_scoring.py
