[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prompt-optimizer"
version = "0.1.0"
description = "Automated Prompt Optimization for Structured Extraction using Ollama"
authors = [{ name = "Research Engineering Team" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
prompt-optimizer = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
